# CaptainHook

./: LICENSE  Makefile  README.md  TODO.txt  asmcompile.py  meson.build  meson.options
fcm_test/: fcm_disasm.c  meson.build
include/: CptHook.h
src/: TODO.txt  cpthk_js_module.c  cpthook.c  cpthook_anal.c  cpthook_ir.c  cpthook_js.c  cpthook_temu.c  cpthook_utils.c  cpthook_x64.asm  cpthook_x86.asm  meson.build
src/fadec/: format.c  meson.build
src/fadec/include/: fadec-decode-private.inc  fadec-decode-public.inc  fadec-encode-private.inc  fadec-encode-public.inc  fadec.h
src/fcm/: meson.build
src/fcm/include/: fcml_coll.h  fcml_dialect_int.h  fcml_symbols.h
src/fcm/src/: fcml_disassembler.c  fcml_symbols.c
src/include/: cpthook.h  cpthook_anal.h  cpthook_int.h  cpthook_ir.h  cpthook_js.h  cpthook_temu.h  cpthook_utils.h
src/quickjs/: meson.build
src/quickjs/src/: quickjs-libc.c  quickjs.c
tests/: meson.build  tests.c
tests/fcm_test/: fcm_test.c  meson.build
tests/include/: testing.h
tests/qjs_test/: qsj_test.c
tests/src/: main.c  tests_a.c
